KB-11768 : updated access validator package